[tool.poetry]
name = "ultima-scraper-api"
version = "2.1.1"
description = ""
authors = [
    "UltimaHoarder <1285176+UltimaHoarder@users.noreply.github.com>",
]
packages = [{include = "ultima_scraper_api"}]
include = ["ultima_scraper_api/py.typed"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
requests = {extras = ["socks"], version = "2.28.2"}
orjson = "^3.8.3"
dill = "^0.3.6"
python-socks = {extras = ["asyncio"], version = "2.2.0"}
aiohttp = "^3.8.4"
aiohttp-socks = "^0.8.0"
mergedeep = "^1.3.4"
python-dateutil = "^2.8.2"
user-agent = "^0.1.10"
aiofiles = "^22.1.0"
beautifulsoup4 = "^4.11.1"
mypy = "^0.991"
lxml =  "^4.9.1"
win32-setctime = {version="^1.1.0", platform = 'win32'}
pywidevine = "^1.6.0"
xmltodict = "^0.13.0"
pydantic = "^1.10.9"
inflection = "^0.5.1"

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^7.33.2"
black = {version = "^23.3.0", allow-prereleases = true}
Sphinx = "^5.3.0"
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.1.1"

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"

[project.urls]
Homepage = "https://github.com/DIGITALCRIMINALS/UltimaScraperAPI"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
