[project]
name = "ultima-scraper-api"
version = "3.0.0b4"
description = "A modular Python scraping framework for premium content platforms"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "AGPL-3.0" }
authors = [
    { name = "UltimaHoarder", email = "1285176+UltimaHoarder@users.noreply.github.com" }
]
keywords = ["scraper", "api", "onlyfans", "fansly", "loyalfans", "asyncio", "data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.8.4",
    "aiohttp-socks>=0.9.0",
    "aiofiles>=22.1.0",
    "alive-progress>=3.1.5",
    "beautifulsoup4>=4.11.1",
    "dill>=0.3.6",
    "httpx>=0.28",
    "inflection>=0.5.1",
    "lxml>=4.9.1",
    "mergedeep>=1.3.4",
    "orjson>=3.8.3",
    "pydantic>=2.0",
    "python-dateutil>=2.8.2",
    "python-socks[asyncio]>=2.2.0",
    "pywidevine",
    "redis[hiredis]>=6.2.0,<7.0.0",
    "requests[socks]>=2.28",
    "user-agent>=0.1.10",
    "websockets>=15.0.1,<16.0.0",
    "win32-setctime>=1.1.0; platform_system == 'Windows'",
    "xmltodict>=0.13.0",
    "ffmpeg-python>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "mkdocs-material>=9.6.22",
    "nox>=2024.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "python-semantic-release>=7.33.2",
]

[project.urls]
Homepage = "https://github.com/UltimaHoarder/UltimaScraperAPI"
Repository = "https://github.com/UltimaHoarder/UltimaScraperAPI"
Documentation = "https://ultimahoarder.github.io/UltimaScraperAPI/"
Issues = "https://github.com/UltimaHoarder/UltimaScraperAPI/issues"
Changelog = "https://github.com/UltimaHoarder/UltimaScraperAPI/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ultima_scraper_api"]

[tool.uv.sources]
pywidevine = { git = "https://github.com/UltimaHoarder/pywidevine.git" }
